<resources>
    <string name="app_name">AudioBook</string>
    <string name="tab_text_1">Магазин</string>
    <string name="tab_text_2">Аудиотека</string>
    <string name="tab_text_3">Плеер</string>
    <string name="tab_text_4">Категории</string>
    <string name="tab_text_5">Настройки</string>
    <string name="title_activity_book">BookActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_information">InformationActivity</string>
</resources>
