<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        app:tabTextColor="@color/colorWhite"
        android:scrollbarSize="30dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGray_3"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_nav_shop"
            android:text="@string/tab_text_1"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_nav_audioteka"
            android:text="@string/tab_text_2"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_nav_player"
            android:text="@string/tab_text_3"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_nav_category"
            android:text="@string/tab_text_4"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_nav_setting"
            android:text="@string/tab_text_5"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>